--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "string-includes-x",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Determines whether one string may be found within another string.",
   "homepage": "https://github.com/Xotic750/string-includes-x",
   "author": {
@@ -29,9 +29,10 @@
     "url": "https://github.com/Xotic750/string-includes-x/issues"
   },
   "dependencies": {
-    "is-regexp": "^1.0.0",
-    "require-object-coercible-x": "^1.4.0",
-    "to-string-x": "^1.4.0"
+    "attempt-x": "^1.1.0",
+    "is-regexp-x": "^2.2.0",
+    "require-object-coercible-x": "^1.4.1",
+    "to-string-x": "^1.4.1"
   },
   "devDependencies": {
     "@xotic750/eslint-config-standard-x": "^2.2.1",
