--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "string-includes-x",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "description": "Determines whether one string may be found within another string.",
   "homepage": "https://github.com/Xotic750/string-includes-x",
   "author": {
@@ -22,6 +22,7 @@
   ],
   "module": "dist/string-includes-x.esm.js",
   "main": "dist/string-includes-x.js",
+  "jsdelivr": "dist/string-includes-x.min.js",
   "scripts": {
     "build:esm": "mkdirp dist && babel -s true --env-name esm src/string-includes-x.js -o dist/string-includes-x.esm.js",
     "build:base": "webpack --bail --progress --profile --colors",
@@ -49,10 +50,10 @@
     "url": "https://github.com/Xotic750/string-includes-x/issues"
   },
   "dependencies": {
-    "attempt-x": "^2.0.16",
-    "is-regexp-x": "^3.0.12",
-    "require-object-coercible-x": "^2.0.20",
-    "to-string-x": "^2.0.28"
+    "attempt-x": "^2.0.18",
+    "is-regexp-x": "^3.0.13",
+    "require-object-coercible-x": "^2.0.22",
+    "to-string-x": "^2.0.30"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
@@ -90,7 +91,7 @@
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "^22.13.6",
-    "eslint-plugin-jsdoc": "^15.7.1",
+    "eslint-plugin-jsdoc": "^15.7.2",
     "eslint-plugin-json": "^1.4.0",
     "eslint-plugin-lodash": "^5.1.0",
     "eslint-plugin-no-use-extend-native": "^0.4.1",
